@@ -1,5 +1,7 @@
 2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
+	* mode-info.el (mode-info-class-alist): Add guile and scheme.
+
 	* mi-index.el (make-index-file): When Emacs is running without
 	interactive terminal, do not load a generated index.
 	(write-index-file): Call `save-buffer' instead of `write-region'
